--- a/RAP.bib
+++ b/RAP.bib
@@ -110,6 +110,14 @@
 	publisher={Academic press}
 }
 
+@book{fu20115book,
+	title={Handbook of Simulation Optimization},
+	editor={Fu, Michael},
+	year={2015},
+	publisher={Springer}
+}
+
+
 @article{zhang2020BAP,
 	title={Buffer Allocation Problem in production flow lines: a new Benders decomposition based exact solution approach},
 	author={Zhang, Mengyi and Erica Pastore and Matta, Andrea and Alfieri, Arianna},
