--- a/Answer to reviewers.tex
+++ b/Answer to reviewers.tex
@@ -12,19 +12,24 @@
 \noindent
 Dear DE, AE and reviewers,
 
-Thanks to your valuable review comments, this submission has undergone a major revision. In this new version, the MP models are developed based on general timed Petri nets (TPN) instead of the proposed representation of discrete event dynamic systems (DEVS) in the previous submission. This change reduces the difficulty of applying the proposed approach and can be better understood by people familiar with DEVS.
+Thanks to your valuable %review 
+comments, this submission has undergone a major revision. In this %new 
+revised version, the MP models are developed based on general timed Petri nets (TPN) instead of the proposed representation of discrete event dynamic systems (DEVS) that was used in the previous submission. This change reduces the difficulty of applying the proposed approach and can be better understood by people familiar with DEVS.
 
 
 The concerns about application, usefulness, benefit and computational complexity were mentioned by the editors and reviewers for several times. 
 
 
-We have seen many applications of mathematical programming (MP) of system dynamics in literature. Most of the works couples the system dynamics and optimization, as in \cite{di2020makespan}, \cite{weiss2015buffer}, \cite{bemporad1999control}, \cite{alfieri2020time}. All those works solve problems in industrial applications, thus, the applicability has been proved. The properties of DEVS can also be analyzed through MPs, as in \cite{basile2012k}.
+To answer such concerns, we have seen many applications of the use of mathematical programming (MP) for the representation of system dynamics in literature. Most of the works couples the system dynamics and optimization, as in \cite{di2020makespan}, \cite{weiss2015buffer}, \cite{bemporad1999control}, \cite{alfieri2020time}. All those works solve problems in industrial applications, thus, the applicability has been proved. The properties of DEVS can also be analyzed through MPs, as in \cite{basile2012k}.
 
 
-The usefulness and benefit of this work can be justified in two aspects, namely generalization and convenience. TPN is a widely--used general modeling diagram of DEVS, and the proposed work would be easy to apply for people in this field.
+The usefulness %and benefit 
+of this work can be justified in two aspects, namely generalization and convenience. TPN is a widely--used general modeling diagram of DEVS, and the proposed work would be easy to apply for people in this field.
 
 
-The computational complexity of using MP to optimize DEVS has been noticed in many works, and they dealt the issue with classic MP techniques such as Benders decomposition, linear approximation, columns-row generation. We cannot deny that the computation issue really exists, but the ways to overcome are also vast. Furthermore, the translation is bidirectional. One can translate simulation into MP to optimize a system, and also translate the resulting MP into simulation. The value of translating MP into simulation is that the research on MP (such as duality and sensitivity) can dig the value of simulation, which is currently usually regarded as a performance evaluation tool. 
+The computational complexity of using MP to optimize DEVS has been %noticed 
+addressed in many works, and they dealt the issue with classic MP techniques such as Benders decomposition, linear approximation, columns-row generation. We cannot deny that the computation issue really exists, but the ways to overcome are also vast. Furthermore, the translation is bidirectional. One can translate simulation into MP to optimize a system, and also translate the resulting MP into simulation. The value of translating MP into simulation is that the research on MP (such as duality and sensitivity) can %dig
+increase the value of simulation, which is currently usually regarded only as a performance evaluation tool. 
 
 
 In the following, we answer the comments in details. 
@@ -35,7 +40,9 @@ In the following, we answer the comments in details.
 \textit{The merit of the proposed technique should be clarified either in a general setting or on specific classes of systems like Petri nets or finite automata, and \textcolor{blue}{comparisons with extant tools and algorithms} should be made.}
 
 \noindent
-\textbf{Answer:} In this submission, our approach works under general settings deterministic timed Petri net. 
+\textbf{Answer:} %In this submission, 
+In the revised manuscript our approach %works
+has been reformulated to have it working under general settings deterministic timed Petri net. 
 
 
 \section{AE Comments}
@@ -44,12 +51,18 @@ In the following, we answer the comments in details.
 \textit{1. The authors should convincingly demonstrate the benefit of the proposed MPR over other formalism like the automata and PN while also considering the complexity burden of solving the resulting mathematical program. }
 
 \noindent
-\textbf{Answer:} In this submission, we justify the benefit and computational burden of the proposed approach as follows: 
+\textbf{Answer:} %In this submission, 
+In the revised manuscript, we justify the benefit and computational burden of the proposed approach as follows: 
 
-The benefits of using MP model to present discrete event systems are many. As already mentioned above, when coupled with optimization, the MP-based algorithms can be faster and gain better solution than black--box optimization algorithms. Furthermore, black--box approaches have limited capability is solving constrained optimization problems, but MP-based approaches can easily deal with them \cite{zhang2020models}. Thirdly, the vast theoretical and methodological results developed in the MP field can be introduced into the study of DEVS through simulation. For instance, using sensitivity analysis of MP models, DES can be a gradient estimation tool, as suggested in \cite{chan2008optimization}. In fact, we do not proposed to totally replace simulation with MP, but to enrich the toolbox for analyzing and optimizing DEVS. Finally, the application of MP models of DEVS is not limited to optimization. \cite{basile2012k} proposed the sufficient and necessary condition of K-diagnosability of TPN based on MP. 
+The benefits of using MP model to represent discrete event systems are many. As already mentioned above, when coupled with optimization, the MP-based algorithms can be faster and %gain 
+reach better solution than black--box optimization algorithms. Furthermore, black--box approaches have limited capability is solving constrained optimization problems, %but 
+while MP-based approaches can easily deal with them (\cite{zhang2020models}). Third, the vast theoretical and methodological results developed in the MP field can be introduced into the study of DEVS through simulation. For instance, using sensitivity analysis of MP models, DES can %be
+become a gradient estimation tool, as suggested in \cite{chan2008optimization}. In fact, we do not proposed to totally replace simulation with MP, but to enrich the toolbox for analyzing and optimizing DEVS. Finally, the application of MP models of DEVS is not limited to optimization. \cite{basile2012k} proposed the sufficient and necessary condition of K-diagnosability of TPN based on MP. 
 
 
-The major concern about the application of MP is the computational complexity, and the solving procedure can be time-consuming or even unbearable. However, many approaches from optimization community are available to improve the efficiency. Linear programming approximation (\cite{alfieri2012mathematical}), Benders decomposition (\cite{weiss2015buffer}), row-column generation (\cite{alfieri2020time}), have been studied to solve optimization problems in reality based-on MP model of DEVS.
+The major concern about the application of MP is the computational complexity, %and the solving procedure 
+as the solution procedure can be time-consuming or even unbearable. However, many approaches from optimization community are available to improve the efficiency. Linear programming approximation (\cite{alfieri2012mathematical}), Benders decomposition (\cite{weiss2015buffer}), row-column generation (\cite{alfieri2020time}), have been studied to solve optimization problems in %reality
+real contexts based-on MP model of DEVS.
 
 ~\\
 
@@ -66,13 +79,19 @@ The major concern about the application of MP is the computational complexity, a
 \textit{References: \cite{basile2012k}, \cite{basile2012k}, \cite{bemporad1999control}}
 
 \noindent
-\textbf{Answer:} As the reviewer suggests, this submission proposed the translation of TPN into MP. 
+\textbf{Answer:} As the reviewer suggests, %this submission proposed 
+in the revised manuscript we propose the translation of TPN into MP. 
 
 
-The difference between the proposed approach and the suggested references are as follows. \cite{bemporad1999control} proposed a mixed integer programming modeling framework for hybrid systems, whose states are mixed integer, in discrete time, while this work deals with continuous--time discrete--state systems. An MP model was proposed to minimize the makespan of single-server manufacturing systems in \cite{di2020makespan}, but this work is more general and can model multi-server systems. \cite{basile2012k} proposes the model based on PN, not TPN, because it deals with diagnosability other than time-dependent performance measures, such as waiting time or throughput. 
+The difference between the proposed approach and the suggested references are %as follows.
+detailed in the following. \cite{bemporad1999control} proposed a mixed integer programming modeling framework for hybrid systems, whose states are mixed integer, in discrete time, while this work deals with continuous--time discrete--state systems. An MP model was proposed to minimize the makespan of single-server manufacturing systems in \cite{di2020makespan}, %but this
+while our work is more general and can model multi-server systems. \cite{basile2012k} proposed the model based on PN, not TPN, because %it deals with 
+the paper is about diagnosability %other 
+rather than time-dependent performance measures, such as waiting time or throughput. 
 
 
-The effective application domain of the proposed technique is basically related to optimization. The MP model of TPN is easy to expand to an MP model of TPN optimization. (\textcolor{blue}{to be expanded})
+The effective application domain of the proposed technique is basically related to optimization. The MP model of TPN %is easy to expand 
+can be easily expanded to an MP model of TPN optimization. (\textcolor{blue}{to be expanded})
 
 
 \section{Reviewer 2}
@@ -89,9 +108,12 @@ comparison with a DES simulator, implementing an operational
 semantics of the particular DES considered in the paper.}
 
 \noindent
-\textbf{Answer:} The reviewer's comment is reasonable. We justify the computational burden as follows in the submission:
+\textbf{Answer:} The reviewer's comment is reasonable. We %justify 
+discuss the computational burden as follows in the submission:
 
-The major concern about the application of MP is the computational complexity, and the solving procedure can be time-consuming or even unbearable. However, many approaches from optimization community are available to improve the efficiency. Linear programming approximation (\cite{alfieri2012mathematical}), Benders decomposition (\cite{weiss2015buffer}), row-column generation (\cite{alfieri2020time}), have been studied to solve optimization problems in reality based-on MP model of DEVS.
+The major concern about the application of MP is the computational complexity, %and the solving procedure 
+as the solution procedure can be time-consuming or even unbearable. However, many approaches from optimization community are available to improve the efficiency. Linear programming approximation (\cite{alfieri2012mathematical}), Benders decomposition (\cite{weiss2015buffer}), row-column generation (\cite{alfieri2020time}), have been studied to solve optimization problems in %reality
+real contexts based-on MP model of DEVS.
 
 ~\\
 
