--- a/Answer to reviewers.tex
+++ b/Answer to reviewers.tex
@@ -104,9 +104,9 @@ serious doubt about the usefulness of the whole approach, in
 comparison with a DES simulator, implementing an operational
 semantics of the particular DES considered in the paper.}
 
-\noindent
-\textbf{Answer:} The reviewer's comment is reasonable. We %justify 
-discuss the computational burden as follows in the submission:
+%\noindent
+%\textbf{Answer:} The reviewer's comment is reasonable. We %justify 
+%discuss the computational burden as follows in the submission:
 
 The major concern about the application of MP is the computational complexity, %and the solving procedure 
 as the solution procedure can be time-consuming or even unbearable. However, many approaches from optimization community are available to improve the efficiency. Linear programming approximation (\cite{alfieri2012mathematical}), Benders decomposition (\cite{weiss2015buffer}), row-column generation (\cite{alfieri2020time}), have been studied to solve optimization problems in %reality
